--- a/index.html
+++ b/index.html
@@ -11,25 +11,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header-bg">
-        <nav>
-            <ul class="navbar-menu">
-               <div class="box-navbar">
-                   <p>SILVERBACK</p>
-                       <div class="navbar-content">
-                           <li><a href="#">services</a></li>
-                           <li><a href="#">about</a></li>
-                           <li><a href="#">contact</a></li>
-                           <li><a href="#">prices</a></li>
-                       </div>
-                       <div class="navbar-content">
-                           <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-                           <li><a href="#"><i class="bi bi-youtube"></i></a></li>
-                           <li><a href="#"><i class="bi bi-tiktok"></i></a></li>
-                       </div>
-               </div>
-            </ul>
-        </nav>
+    <header>
+      <nav>
+        <a class="logo" href="/">SILVERBACK</a>
+        <div class="mobile-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <ul class="nav-list">
+          <li><a href="#">home</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">services</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main class="main-bg">
@@ -160,5 +156,9 @@
             <li><a href="https://github.com/duu19" target="_blank"><i class="bi bi-envelope-at"></i></a></i></li>
         </ul>
     </footer>
+
+
+    <!-- javascript -->
+    <script src="script.js"></script>
 </body>
 </html>
