--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </div>
         <ul class="nav-list">
           <li><a href="#">home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">services</a></li>
-          <li><a href="#">contact</a></li>
+          <li><a href="#about">about</a></li>
+          <li><a href="#services">services</a></li>
+          <li><a href="#contact">contact</a></li>
         </ul>
       </nav>
     </header>
@@ -32,7 +32,7 @@
         <h1>DAILY SCHEDULE <br> AT TRAINING CAMP</h1>
     </main>
 
-    <section class="about-bg">
+    <section class="about-bg" id="about">
         <div class="about-box">
             <div class="about-text1">
                 <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus, debitis! Lorem ipsum dolor sit amet.</h1>
@@ -64,7 +64,7 @@
         </div>
     </section>
 
-    <section class="perso-bg">
+    <section class="perso-bg" id="services">
         <div class="perso-box">
             <div class="perso1">
                 <img class="img1" src="img/perso2.png" alt="mike tyson jump rope">
@@ -148,7 +148,7 @@
         </div>
     </section>
 
-    <footer class="footer-bg">
+    <footer class="footer-bg" id="contact">
         <p>developed by Eduardo Henrique. All rights reserved.</p>
         <ul class="footer-icons">
             <li><a href="https://github.com/duu19" target="_blank"><i class="bi bi-github"></i></a></i></li>
