--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <header>
       <nav>
-        <a class="logo" href="/">SILVERBACK</a>
+        <a class="logo" href="https://github.com/duu19" target="bl
+        ">SILVERBACK</a>
         <div class="mobile-menu">
           <div class="line1"></div>
           <div class="line2"></div>
@@ -133,6 +134,20 @@
     <section class="cite-bg">
         <div class="cite-text">
             <h1><span class="black-color">“</span> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum explicabo officia dolore at veritatis eaque libero. Illo ipsam reiciendis molestiae. <span class="black-color">”</span></h1>
+        </div>
+    </section>
+
+    <section class="contact-bg" id="contact">
+        <h1>contact.</h1>
+        <div class="map-box">
+            <img class="map-img" src="img/map.png" alt="map">
+            <ul>
+                <li><i class="bi bi-geo"></i>Brazuka</li>
+                <li><i class="bi bi-geo"></i>500 W Flagler St</li>
+                <li><i class="bi bi-person-check"></i>Open 7 Days A Week</li>
+                <li><i class="bi bi-telephone"></i>+55 (14) 9999-9999</li>
+                <li><i class="bi bi-envelope-at"></i>duardohenriqe19@gmail.com</li>
+            </ul>
         </div>
     </section>
 
