--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title> SILVERBACK - GYM </title>
+    <link
+    rel="stylesheet"
+    href="https://unpkg.com/swiper/swiper-bundle.min.css"
+  />
     <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <!-- css -->
@@ -46,15 +50,19 @@
     </section>
 
     <aside class="slides-bg">
-        <swiper-container class="mySwiper" pagination="true" pagination-clickable="true" navigation="true" space-between="30"
-        centered-slides="true" autoplay-delay="2500" autoplay-disable-on-interaction="false">
-        <swiper-slide><img src="img/slide1.jpg" alt=""></swiper-slide>
-        <swiper-slide><img src="img/slide2.jpg" alt=""></swiper-slide>
-        <swiper-slide><img src="img/slide3.jpg" alt=""></swiper-slide>
-        <swiper-slide><img src="img/slide1.jpg" alt=""></swiper-slide>
-        <swiper-slide><img src="img/slide2.jpg" alt=""></swiper-slide>
-        <swiper-slide><img src="img/slide3.jpg" alt=""></swiper-slide>
-      </swiper-container>
+        <div class="swiper-container mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><img src="img/slide1.jpg" alt="slide1"></div>
+              <div class="swiper-slide"><img src="img/slide2.jpg" alt="slide2"></div>
+              <div class="swiper-slide"><img src="img/slide3.jpg" alt="slide3"></div>
+              <div class="swiper-slide"><img src="img/slide1.jpg" alt="slide1"></div>
+              <div class="swiper-slide"><img src="img/slide2.jpg" alt="slide2"></div>
+              <div class="swiper-slide"><img src="img/slide3.jpg" alt="slide3"></div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+          </div>
     </aside>
 
     <section class="services-bg" id="services">
@@ -188,6 +196,25 @@
     <!-- javascript -->
     <script src="script.js"></script>
     <!-- swiperjs-->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- initialize swiper -->
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+        spaceBetween: 30,
+        centeredSlides: true,
+        autoplay: {
+          delay: 2500,
+          disableOnInteraction: false,
+        },
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+      });
+    </script>
 </body>
 </html>
