--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title> SILVERBACK - GYM </title>
+    <!-- favicon icon -->
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <!-- swiper-->
     <link
     rel="stylesheet"
     href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -164,21 +167,36 @@
         <div class="box-prices">
             <div class="prices-text copper">
                 <p>R$9</p>
-                <h3>copper</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi veniam nesciunt dolorem voluptatem odit libero.</p>
-                <a class="btn-prices" href="#contact">buy</a>
+                <h3><i class="bi bi-tropical-storm"></i> copper</h3>
+                <h4><i class="bi bi-clipboard-check"></i> advantages</h4>
+                <ul>
+                    <li><i class="bi bi-check"></i> 1</li>
+                    <li><i class="bi bi-check"></i> 2</li>
+                    <li> <i class="bi bi-check"></i> 3</li>
+                </ul>
+                <a class="btn-prices" href="#contact"><i class="bi bi-arrow-right-short"></i>buy</a>
             </div>
             <div class="prices-text silver">
                 <p>R$99</p>
-                <h3>silver</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi veniam nesciunt dolorem voluptatem odit libero.</p>
-                <a class="btn-prices" href="#contact">buy</a>
+                <h3><i class="bi bi-tropical-storm"></i> silver</h3>
+                <h4><i class="bi bi-clipboard-check"></i> advantages</h4>
+                <ul>
+                    <li><i class="bi bi-check"></i> 1</li>
+                    <li><i class="bi bi-check"></i> 2</li>
+                    <li><i class="bi bi-check"></i> 3</li>
+                </ul>
+                <a class="btn-prices" href="#contact"><i class="bi bi-arrow-right-short"></i>buy</a>
             </div>
             <div class="prices-text gold">
                 <p>R$999</p>
-                <h3>gold</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi veniam nesciunt dolorem voluptatem odit libero.</p>
-                <a class="btn-prices" href="#contact">buy</a>
+                <h3><i class="bi bi-tropical-storm"></i> gold</h3>
+                <h4><i class="bi bi-clipboard-check"></i> advantages</h4>
+                <ul>
+                    <li><i class="bi bi-check"></i> 1</li>
+                    <li><i class="bi bi-check"></i> 2</li>
+                    <li> <i class="bi bi-check"></i> 3</li>
+                </ul>
+                <a class="btn-prices" href="#contact"><i class="bi bi-arrow-right-short"></i>buy</a>
             </div>
         </div>
     </section>
@@ -194,7 +212,7 @@
 
 
     <!-- javascript -->
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <!-- swiperjs-->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- initialize swiper -->
