style: color, fix: positions

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- header -->
     <header>
       <nav>
         <a class="logo" href="https://github.com/duu19" target="bl
@@ -36,10 +37,12 @@
       </nav>
     </header>
 
+    <!-- main -->
     <main class="main-bg">
         <h1>DAILY SCHEDULE <br> AT TRAINING CAMP</h1>
     </main>
 
+    <!-- about -->
     <section class="about-bg" id="about">
         <div class="about-box">
             <div class="about-text1">
@@ -52,6 +55,7 @@
         </div>
     </section>
 
+    <!-- slider -->
     <aside class="slides-bg">
         <div class="swiper-container mySwiper">
             <div class="swiper-wrapper">
@@ -68,6 +72,7 @@
           </div>
     </aside>
 
+    <!-- services -->
     <section class="services-bg" id="services">
         <div class="services-box">
             <div class="services-text">
@@ -88,6 +93,7 @@
         </div>
     </section>
 
+    <!-- perso training -->
     <section class="perso-bg">
         <div class="perso-box">
             <div class="perso1">
@@ -104,9 +110,10 @@
         </div>
     </section>
 
+    <!-- boxe club -->
     <section class="box-bg">
 
-        <h1>about boxe club.</h1>
+        <h1>about boxe club</h1>
 
         <div class="box-club-container">
             <img class="img-box" src="img/3.jpg" alt="box-club">
@@ -129,6 +136,7 @@
         </div>
     </section>
 
+    <!-- boxing info -->
     <section class="boxing-bg">
         <div class="boxing-text">
             <h2>boxing club</h2>
@@ -142,14 +150,16 @@
         </div>
     </section>
 
+    <!-- cite -->
     <section class="cite-bg">
         <div class="cite-text">
-            <h1><span class="black-color">“</span> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum explicabo officia dolore at veritatis eaque libero. Illo ipsam reiciendis molestiae. <span class="black-color">”</span></h1>
+            <h1><span class="white1-color">“ Today is victory over yourself of yesterday; tomorrow is your victory over lesser men. <span class="black-color"> ”</span></h1>
         </div>
     </section>
 
+    <!-- contato-->
     <section class="contact-bg" id="contact">
-        <h1>contact.</h1>
+        <h1>contact</h1>
         <div class="map-box">
             <img class="map-img" src="img/map.png" alt="map">
             <ul>
@@ -162,8 +172,9 @@
         </div>
     </section>
 
+    <!-- precos -->
     <section class="prices-bg">
-        <h1 class="prices-tittle">optimal prices, best workouts.</h1>
+        <h1 class="prices-tittle">optimal prices, best workouts</h1>
         <div class="box-prices">
             <div class="prices-text copper">
                 <p>R$9</p>
@@ -174,7 +185,7 @@
                     <li><i class="bi bi-check"></i> 2</li>
                     <li> <i class="bi bi-check"></i> 3</li>
                 </ul>
-                <a class="btn-prices" href="#contact"><i class="bi bi-arrow-right-short"></i>buy</a>
+                <a class="btn-prices" href="#contact"><i class="bi bi-arrow-right-short"></i>🦍</a>
             </div>
             <div class="prices-text silver">
                 <p>R$99</p>
@@ -185,7 +196,7 @@
                     <li><i class="bi bi-check"></i> 2</li>
                     <li><i class="bi bi-check"></i> 3</li>
                 </ul>
-                <a class="btn-prices" href="#contact"><i class="bi bi-arrow-right-short"></i>buy</a>
+                <a class="btn-prices" href="#contact"><i class="bi bi-arrow-right-short"></i>🦍</a>
             </div>
             <div class="prices-text gold">
                 <p>R$999</p>
@@ -196,11 +207,12 @@
                     <li><i class="bi bi-check"></i> 2</li>
                     <li> <i class="bi bi-check"></i> 3</li>
                 </ul>
-                <a class="btn-prices" href="#contact"><i class="bi bi-arrow-right-short"></i>buy</a>
+                <a class="btn-prices" href="#contact"><i class="bi bi-arrow-right-short"></i>🦍</a>
             </div>
         </div>
     </section>
 
+    <!-- footer -->
     <footer class="footer-bg" id="contact">
         <p>developed by Eduardo Henrique. All rights reserved.</p>
         <ul class="footer-icons">
